# htsengine-rs

./: Cargo.toml  NOTICE  README.md
crates/htsengine/: Cargo.toml
crates/htsengine-sys/: Cargo.toml  build.rs  wrapper.h
crates/htsengine-sys/htsengine/: CMakeLists.txt
crates/htsengine-sys/src/: bindings.rs
crates/htsengine/src/: lib.rs
crates/htsengine/tests/: model.rs
